--- a/index.html
+++ b/index.html
@@ -1,3 +1,28 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Please wait a moment...</title>
-<link rel="icon" href="images/favicon-32x32.png"><link href="https://api.fontshare.com/v2/css?f[]=satoshi@1&amp;display=swap" rel="stylesheet"><style>body{background-color:#0a0a0a;font-family:satoshi,sans-serif;font-weight:450;display:flex;justify-content:center;place-items:center;flex-direction:column;margin:0;padding:0}html{height:100%}body{min-height:100%}.logo{text-align:center;color:#fafafa;display:flex;flex-direction:column;place-items:center}.logo h1 span{color:#b472e0}.logo h1{font-size:47px;margin:0;margin-top:25px}.logo img{height:160px}.wrapper{animation:1.75s loading infinite}@keyframes loading{0%,100%{transform:scale(1)}50%{transform:scale(1.18)}}.loader svg{font-size:65px;color:#fff}.container{text-align:center;color:#fafafa;padding-left:15px;padding-right:15px;display:flex;flex-direction:column;place-items:center;z-index:9999}.container h3{font-weight:550;margin:0;color:#ae8cc5;margin-top:-10px;margin-bottom:25px}.wrapper{max-width:fit-content}.footer{height:30px;position:absolute;bottom:19px;width:55%;padding-top:18px;color:#ccc;display:flex;justify-content:space-between;place-items:center}.footerWrapper{display:flex;justify-content:center;width:100%}.footer h1,h3{margin:0}.left h3{font-size:15px}.discord{color:#5662f6}.right{display:flex;gap:7px}.iconify{font-size:25px}.right a{display:flex;place-items:center;text-decoration:none;color:#fafafa}.right a svg{margin-left:7px;transition:.35s}.right a svg:hover{transform:scale(1.2)}.line{position:absolute;bottom:65px;height:1.7px;width:60%;background:linear-gradient(90deg,rgba(255,255,255,.1%),#ba52ff2d,rgba(255,255,255,.1%))}@media(max-width:1500px){.line{width:80%}.footer{width:72%}}@media(max-width:870px){.line{width:90%}.footer{width:82%}}@media(max-width:630px){.line{width:100%}.footer{width:92%}.left h3{font-size:14px}.right a span{font-size:14.7px}}@media(max-width:450px){.right a span{display:none}.right a svg{font-size:29.5px}}.bg{position:absolute;height:100%;width:100%;object-fit:cover;z-index:999}.overlay{background-color:#0a0a0a15;z-index:9999;position:absolute;height:100%;width:100%}</style></head><body><div class="overlay"></div><img class="bg" src="images/gradient_background.png" alt=""><div class="container"><div class="logo"><div class="wrapper"><img src="images/guns_logo_c.png" alt=""></div><h1>guns<span>.</span>lol</h1></div><div class="loader"><span class="iconify" data-icon="eos-icons:three-dots-loading" data-inline="false"></span></div><h3>Please wait while we verify your request...</h3></div><script src="js/iconify.min.js"></script><script src="js/_pow.js"></script><script>(function(){window._gs_sets={ps:"9fa4414a4a99799abb3a022bb11896f769ce7615e64bb53649fd8202220",d:"5",c:"d81902eb01459d2de22dff50dc811dbb0c70afbc08f2a86ccbb19559c0693694",t:3600,p:null,__ts:Math.floor(Date.now()/1e3),_ts:null,_tsp:null,__ps:"",_so:"",__s:"2",_org_ts:"1732391454"}})(),window._gs_sets.p=new _injPow(window._gs_sets.ps,window._gs_sets.d,window._gs_sets.c,!1),window._gs_sets._ts=window._gs_sets.__ts-Number(window._gs_sets._org_ts),window._gs_sets._tsp=window._gs_sets.__ts-window._gs_sets._ts,window._gs_sets.p.solvepow().then(async e=>{e!=null&&await _s(e.solution)});async function _s(e){window._gs_sets.__ps=window._gs_sets.ps,window._gs_sets._so=e,await _h()}async function _h(){const e=new FormData;e.append("_p",window._gs_sets.__ps),e.append("_o",btoa(window._gs_sets._so)),e.append("_t",window._gs_sets._tsp),e.append("_s",window._gs_sets.__s),await fetch("/_challenge/verify",{method:"POST",body:e}).then(async e=>{e.ok&&location.reload()})}</script><script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'8e73b0deed2f0bb9',t:'MTczMjM5MTQ1NC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script><iframe height="1" width="1" style="position: absolute; top: 0px; left: 0px; border: none; visibility: hidden;"></iframe><script defer="" src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" data-cf-beacon="{" rayid":"8e73b0deed2f0bb9","servertiming":{"name":{"cfextpri":true,"cfl4":true,"cfspeedbrain":true,"cfcachestatus":true}},"version":"2024.10.5","token":"2fe24d772b4146c9a06db032d45156c9"}"="" crossorigin="anonymous"></script>
-</body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Black Background Video</title>
+    <style>
+        body {
+            margin: 0;
+            background-color: black;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        video {
+            max-width: 100%;
+            max-height: 100%;
+        }
+    </style>
+</head>
+<body>
+    <video controls autoplay loop>
+        <source src="images/your-video-file.mp4" type="video/mp4">
+        <p>Your browser does not support HTML video. Please update your browser.</p>
+    </video>
+</body>
+</html>
