--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <video controls autoplay loop>
-        <source src="images/your-video-file.mp4" type="video/mp4">
+        <source src="images/yay.mp4" type="video/mp4">
         <p>Your browser does not support HTML video. Please update your browser.</p>
     </video>
 </body>
