--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-color: #f4f4f4;
+            background-color: black; /* Black background */
         }
         .video-container {
             display: flex;
@@ -20,9 +20,13 @@
         }
         video {
             width: 30%;
-            border: 2px solid #333;
+            border: 2px solid silver;
             border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 0 15px 5px silver; /* Silver glowing effect */
+            transition: transform 0.3s ease; /* Smooth scaling effect */
+        }
+        video:hover {
+            transform: scale(1.1); /* Slight zoom effect on hover */
         }
     </style>
 </head>
