--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            flex-direction: column;
             height: 100vh;
             margin: 0;
             background-color: black; /* Black background */
@@ -42,6 +43,23 @@
                 transform: scale(2);
             }
         }
+        .watermark {
+            position: absolute;
+            bottom: 10px;
+            width: 100%;
+            text-align: center;
+            color: white;
+            font-size: 14px;
+            font-family: Arial, sans-serif;
+            opacity: 0.6;
+        }
+        .watermark a {
+            color: white;
+            text-decoration: none;
+        }
+        .watermark a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
@@ -61,6 +79,11 @@
             <source src="video/video3.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
+    </div>
+
+    <!-- Watermark -->
+    <div class="watermark">
+        Made by <b>Robio <3</b> | <a href="https://doxbin.fun" target="_blank">Doxbin.fun 2024</a>
     </div>
 
     <script>
