--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
         }
         video {
             width: 30%;
+            transition: transform 0.3s ease, box-shadow 0.3s ease; /* Smooth animation for hover */
+        }
+        video:hover {
+            transform: translateY(-10px) scale(1.05); /* Pop up and slightly enlarge */
+            box-shadow: 0 10px 20px rgba(255, 255, 255, 0.5); /* Add a shadow for more emphasis */
         }
         .sparkle {
             position: absolute;
