--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Three Videos Layout with Sparkles</title>
+    <title>Robio Owns You | Get Doxed</title>
     <style>
         body {
             display: flex;
@@ -15,6 +15,34 @@
             background-color: black; /* Black background */
             overflow: hidden; /* Prevent scrollbars from showing */
             cursor: none; /* Hide the default cursor */
+            color: white;
+            font-family: Arial, sans-serif;
+        }
+        h1 {
+            font-size: 24px;
+            color: red;
+            text-align: center;
+            margin-bottom: 20px;
+            overflow: hidden; /* Ensures the text starts hidden */
+            white-space: nowrap; /* Prevents wrapping */
+            border-right: 2px solid white; /* Cursor effect */
+            animation: typing 3s steps(30, end), blink-caret 0.5s step-end infinite;
+        }
+        @keyframes typing {
+            from {
+                width: 0;
+            }
+            to {
+                width: 100%;
+            }
+        }
+        @keyframes blink-caret {
+            from, to {
+                border-color: transparent;
+            }
+            50% {
+                border-color: white;
+            }
         }
         .video-container {
             display: flex;
@@ -23,6 +51,8 @@
         }
         video {
             width: 30%;
+            border-radius: 8px;
+            box-shadow: 0 0 15px 5px silver; /* Default glow */
             transition: transform 0.3s ease, box-shadow 0.3s ease; /* Smooth animation for hover */
         }
         video:hover {
@@ -55,7 +85,6 @@
             text-align: center;
             color: white;
             font-size: 14px;
-            font-family: Arial, sans-serif;
             opacity: 0.6;
         }
         .watermark a {
@@ -65,9 +94,20 @@
         .watermark a:hover {
             text-decoration: underline;
         }
+        .png-container {
+            margin-top: 20px;
+        }
+        .png-container img {
+            width: 100px; /* Adjust size as needed */
+            height: auto;
+        }
     </style>
 </head>
 <body>
+    <!-- Animated Title -->
+    <h1>Robio Owns You | Get Doxed</h1>
+
+    <!-- Videos -->
     <div class="video-container">
         <!-- Left Video -->
         <video controls>
@@ -84,6 +124,11 @@
             <source src="video/video3.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
+    </div>
+
+    <!-- PNG Image Section -->
+    <div class="png-container">
+        <img src="your-image.png" alt="Custom PNG">
     </div>
 
     <!-- Watermark -->
