--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
         h1 {
             font-size: 24px;
-            color: red;
+            color: white;
             text-align: center;
             margin-bottom: 20px;
             overflow: hidden; /* Ensures the text starts hidden */
@@ -94,13 +94,6 @@
         .watermark a:hover {
             text-decoration: underline;
         }
-        .png-container {
-            margin-top: 20px;
-        }
-        .png-container img {
-            width: 100px; /* Adjust size as needed */
-            height: auto;
-        }
     </style>
 </head>
 <body>
@@ -124,11 +117,6 @@
             <source src="video/video3.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-    </div>
-
-    <!-- PNG Image Section -->
-    <div class="png-container">
-        <img src="your-image.png" alt="Custom PNG">
     </div>
 
     <!-- Watermark -->
