--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Three Videos Layout with Sparkles</title>
+
+    <!-- Open Graph Metadata -->
+    <meta property="og:title" content="Doxing.fun">
+    <meta property="og:description" content="Wa7ed Website khatiir w naaadi">
+    <meta property="og:image" content="https://yourwebsite.com/your-thumbnail.png">
+    <meta property="og:url" content="doxing.fun">
+    <meta property="og:type" content="website">
+
+    <!-- Discord Embed Colors (optional for richer embeds) -->
+    <meta name="theme-color" content="#000000"> <!-- Black background -->
+
     <style>
         body {
             display: flex;
