--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <!-- Open Graph Metadata -->
     <meta property="og:title" content="Doxing.fun">
     <meta property="og:description" content="Wa7ed Website khatiir w naaadi">
-    <meta property="og:image" content="https://yourwebsite.com/your-thumbnail.png">
+    <meta property="og:image" content="https://imgur.com/a/8eimc3K">
     <meta property="og:url" content="doxing.fun">
     <meta property="og:type" content="website">
 
     <!-- Discord Embed Colors (optional for richer embeds) -->
-    <meta name="theme-color" content="#000000"> <!-- Black background -->
+    <meta name="theme-color" content="#ff0000"> <!-- Black background -->
 
     <style>
         body {
