--- a/index.html
+++ b/index.html
@@ -3,59 +3,104 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Three Videos Layout with Sparkles and Rain</title>
+    <title>Three Videos Layout with Sparkles</title>
 
     <!-- Open Graph Metadata -->
-    <meta property="og:title" content="Three Videos Layout with Sparkles and Rain">
-    <meta property="og:description" content="A cool webpage with videos, sparkles, and interactive rain effects. Made by Robio <3">
+    <meta property="og:title" content="Three Videos Layout with Sparkles">
+    <meta property="og:description" content="A cool webpage with videos, sparkles, and hover animations. Made by Robio <3">
     <meta property="og:image" content="https://yourwebsite.com/your-thumbnail.png">
     <meta property="og:url" content="https://yourwebsite.com">
     <meta property="og:type" content="website">
 
-    <!-- Styles -->
+    <!-- Discord Embed Colors (optional for richer embeds) -->
+    <meta name="theme-color" content="#000000"> <!-- Black background -->
+
     <style>
+        /* General styles */
         body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            height: 100vh;
             margin: 0;
-            background-color: black; /* Black background */
-            overflow: hidden; /* Prevent scrollbars from showing */
-            cursor: none; /* Hide the default cursor */
-            position: relative;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            background-color: black;
+            color: white;
+            overflow: hidden;
         }
 
+        /* Navbar styles */
+        .navbar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 20px;
+            background-color: #1a1a1a;
+            color: white;
+            font-family: Arial, sans-serif;
+            position: fixed;
+            top: 0;
+            width: 100%;
+            z-index: 1000;
+        }
+
+        .navbar .logo {
+            font-size: 24px;
+            font-weight: bold;
+            color: #d3b0ff;
+        }
+
+        .nav-links {
+            display: flex;
+            gap: 20px;
+        }
+
+        .nav-links a {
+            text-decoration: none;
+            color: white;
+            font-size: 16px;
+            transition: color 0.3s;
+        }
+
+        .nav-links a:hover {
+            color: #d3b0ff;
+        }
+
+        .nav-links .signup {
+            background-color: #9c4cff;
+            padding: 5px 15px;
+            border-radius: 5px;
+            color: white;
+            font-weight: bold;
+        }
+
+        .nav-links .signup:hover {
+            background-color: #7a3bcb;
+        }
+
+        /* Video container styles */
         .video-container {
             display: flex;
             justify-content: space-between;
             width: 80%;
-            position: relative;
-            z-index: 2; /* Ensure videos are above rain */
+            margin: 100px auto 0; /* Push down to avoid navbar overlap */
         }
 
         video {
             width: 30%;
-            transition: transform 0.3s ease, box-shadow 0.3s ease; /* Smooth animation for hover */
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
 
         video:hover {
-            transform: translateY(-10px) scale(1.05); /* Pop up and slightly enlarge */
-            box-shadow: 0 10px 20px rgba(255, 255, 255, 0.5); /* Add a shadow for more emphasis */
+            transform: translateY(-10px) scale(1.05);
+            box-shadow: 0 10px 20px rgba(255, 255, 255, 0.5);
         }
 
-        .sparkle, .raindrop {
-            position: absolute;
-            pointer-events: none; /* Ignore pointer events */
-            border-radius: 50%;
-        }
-
-        /* Sparkle Effect */
+        /* Sparkle styles */
         .sparkle {
+            position: absolute;
             width: 8px;
             height: 8px;
             background: radial-gradient(circle, white, rgba(255, 255, 255, 0.5));
+            border-radius: 50%;
+            pointer-events: none;
             animation: sparkle 1s ease-out forwards;
         }
 
@@ -70,26 +115,7 @@
             }
         }
 
-        /* Raindrop Effect */
-        .raindrop {
-            width: 3px;
-            height: 10px;
-            background: rgba(255, 255, 255, 0.7);
-            animation: fall 1.5s linear forwards;
-            z-index: 1; /* Behind videos */
-        }
-
-        @keyframes fall {
-            0% {
-                transform: translateY(-20px);
-                opacity: 1;
-            }
-            100% {
-                transform: translateY(300px);
-                opacity: 0;
-            }
-        }
-
+        /* Watermark styles */
         .watermark {
             position: absolute;
             bottom: 10px;
@@ -97,7 +123,6 @@
             text-align: center;
             color: white;
             font-size: 14px;
-            font-family: Arial, sans-serif;
             opacity: 0.6;
         }
 
@@ -112,6 +137,19 @@
     </style>
 </head>
 <body>
+    <!-- Navbar -->
+    <div class="navbar">
+        <div class="logo">guns.lol</div>
+        <div class="nav-links">
+            <a href="#partnership">Hone.gg Partnership</a>
+            <a href="#discord">Discord</a>
+            <a href="#pricing">Pricing</a>
+            <a href="#login">Login</a>
+            <a href="#signup" class="signup">Sign Up Free</a>
+        </div>
+    </div>
+
+    <!-- Video container -->
     <div class="video-container">
         <!-- Left Video -->
         <video controls>
@@ -136,7 +174,7 @@
     </div>
 
     <script>
-        // Sparkle Effect
+        // Function to create sparkles at the cursor position
         document.addEventListener('mousemove', (event) => {
             const sparkle = document.createElement('div');
             sparkle.classList.add('sparkle');
@@ -150,23 +188,6 @@
             sparkle.addEventListener('animationend', () => {
                 sparkle.remove();
             });
-        });
-
-        // Rain Effect
-        document.addEventListener('mousemove', (event) => {
-            const rainContainer = document.createElement('div');
-            for (let i = 0; i < 5; i++) {
-                const raindrop = document.createElement('div');
-                raindrop.classList.add('raindrop');
-                raindrop.style.left = `${event.pageX + Math.random() * 50 - 25}px`;
-                raindrop.style.top = `${event.pageY - 20}px`;
-                document.body.appendChild(raindrop);
-
-                // Remove raindrop after animation ends
-                raindrop.addEventListener('animationend', () => {
-                    raindrop.remove();
-                });
-            }
         });
     </script>
 </body>
