--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Layout with Glow Effect</title>
+    <title>@Robio runs this | Get Doxxed</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
