--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
     </header>
     <main>
         <div class="video-container">
-            <video controls>
+            <video controls onmousemove="handleMouseMove(event, this)" onmouseleave="resetVideos()">
                 <source src="video/video1.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
-            <video controls>
+            <video controls onmousemove="handleMouseMove(event, this)" onmouseleave="resetVideos()">
                 <source src="video/video2.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
-            <video controls>
+            <video controls onmousemove="handleMouseMove(event, this)" onmouseleave="resetVideos()">
                 <source src="video/video3.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
@@ -36,5 +36,53 @@
     <footer>
         <p>All Rights Reserved © Doxing.fun 2024</p>
     </footer>
+
+    <!-- Cursor Effect Container -->
+    <div id="cursor-effect"></div>
+
+    <script>
+        // Custom Cursor Effect
+        const cursorEffect = document.getElementById("cursor-effect");
+        document.addEventListener("mousemove", (e) => {
+            const x = e.clientX;
+            const y = e.clientY;
+
+            // Position the effect element at the mouse location
+            cursorEffect.style.left = `${x}px`;
+            cursorEffect.style.top = `${y}px`;
+        });
+
+        // Function to handle mouse movement and apply transformations
+        function handleMouseMove(event, element) {
+            const rect = element.getBoundingClientRect();
+            const x = ((event.clientX - rect.left) / rect.width) * 2 - 1; // Normalize X (-1 to 1)
+            const y = ((event.clientY - rect.top) / rect.height) * 2 - 1; // Normalize Y (-1 to 1)
+
+            // Stronger tilt for the hovered video
+            const rotateX = y * 20;
+            const rotateY = x * -20;
+
+            // Apply rotation and scale to the hovered video
+            element.style.transform = `rotateX(${rotateX}deg) rotateY(${rotateY}deg) scale(1.1)`;
+
+            // Scale down the other videos
+            const allVideos = document.querySelectorAll('.video-container video');
+            allVideos.forEach(video => {
+                if (video !== element) {
+                    video.style.transform = 'scale(0.9)';
+                    video.style.transition = 'transform 0.3s ease'; // Smooth transition
+                }
+            });
+        }
+
+        // Function to reset all videos to their original state
+        function resetVideos() {
+            const allVideos = document.querySelectorAll('.video-container video');
+            allVideos.forEach(video => {
+                video.style.transform = 'rotateX(0deg) rotateY(0deg) scale(1)';
+                video.style.transition = 'transform 0.3s ease'; // Smooth transition back
+            });
+        }
+    </script>
 </body>
 </html>
