--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Image Display with Snow, Smooth Custom Cursor, and Loader</title>
+  <title>Doxing.fun | robio own u :3</title>
   <style>
     /* Loader styles */
     #loader {
