--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Open Graph (OG) Meta Tags for Discord and Social Media Embeds -->
+  <meta property="og:title" content="Doxing.fun | robio own u :3" />
+  <meta property="og:description" content="part 1 of daiho Dox" />
+  <meta property="og:image" content="https://doxing.fun/ddox.png" /> <!-- Replace with your image URL -->
+  <meta property="og:url" content="https://yourwebsite.com" /> <!-- Replace with your website URL -->
+  <meta name="twitter:card" content="ddox.png" />
+  <meta name="twitter:title" content="Doxing.fun | robio own u :3" />
+  <meta name="twitter:description" content="part 1 of daiho Dox" />
+  <meta name="twitter:image" content="https://doxing.fun/ddox.png" /> <!-- Replace with your image URL -->
+  <meta name="twitter:url" content="https://doxing.fun/" /> <!-- Replace with your website URL -->
+
   <title>Doxing.fun | robio own u :3</title>
   <style>
     /* Loader styles */
@@ -120,8 +131,8 @@
  |  _ \  _____  _(_)_ __   __ _   / _|_   _ _ __  
  | | | |/ _ \ \/ / | '_ \ / _` | | |_| | | | '_ \ 
  | |_| | (_) >  <| | | | | (_| |_|  _| |_| | | | |
- |____/ \___/_/\_\_|_| |_|\__, (_)_|  \__,_|_| |_|
-                          |___/                   
+ |____/ \___/_/\_\_|_| |_|\__, (_)_|  \__,_|_| |_| 
+                          |___/                    
     </pre>
   </div>
   <img src="ddox.png" alt="DDOX Image" />
